# who-wants-to-be-a-millionaire

./: README.md  lv.martinsz.millionaire.json  meson.build
builddir/meson-logs/: meson-log.txt
data/: lv.martinsz.millionaire.appdata.xml.in  lv.martinsz.millionaire.desktop.in  lv.martinsz.millionaire.gschema.xml  meson.build
data/icons/: meson.build
data/resources/: meson.build  millionaire.gresource.xml  style.css
data/resources/ui/: millionaire-window.blp
po/: POTFILES  meson.build
src/: main.c  meson.build  millionaire-application.c  millionaire-application.h  millionaire-gameplay.c  millionaire-questions.c  millionaire-window.blp  millionaire-window.c  millionaire-window.h  millionaire-window.ui  millionaire.gresource.xml  style.css
src/include/: millionaire-application.h  millionaire-gameplay.h  millionaire-questions.h  millionaire-window.h
